fixed bug so invisible checkbox is not checkable until needed

--- a/styles/sass/_navbar.scss
+++ b/styles/sass/_navbar.scss
@@ -12,8 +12,12 @@
     z-index: 30;
   }
   input.hamburger {
-    // display: none;
-    opacity: 0;
+    display: none;
+    @media (max-width: 700px) {
+      // Make sure invisible checkbox is not accessible until needed, otherwise user can hit accidentally and push navigation bar off the page
+      display: block;
+      opacity: 0;
+    }
   }
   input.hamburger + label {
     display: none;
@@ -74,10 +78,12 @@
   }
 }
 
+// Open side-navigation bar when invisible checkbox is checked
 .navBar input[type="checkbox"]:checked ~ ul {
-  right: 0;
+  transform: translateX(-300px);
 }
 
+// Highlight hamburger icon when invisible checkbox is active so that hamburger menu can be opened by keyboard users
 .navBar input.hamburger:active + label,
 .navBar input.hamburger:focus + label {
   color: $accent;
